# copyright-autoheader

./: README.rst  autoheader.yml  meson.build
doc/: copyright-autoheader.rst
src/: copyright-autoheader
